syntax = "proto3";

package v2ray.core.common.serial;
option csharp_namespace = "V2Ray.Core.Common.Serial";
option go_package = "github.com/v2fly/v2ray-core/v4/common/serial";
option java_package = "com.v2ray.core.common.serial";
option java_multiple_files = true;

// TypedMessage is a serialized proto message along with its type name.
message TypedMessage {
  // The name of the message type, retrieved from protobuf API.
  string type = 1;
  // Serialized proto message.
  bytes value = 2;
}
